# Contador

./: CMakeLists.txt  CMakePresets.json  README.md
include/: Contador.h  JanelaContador.h
src/: Contador.cpp  JanelaContador.cpp  main.cpp
